--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <li>element 2</li>
         <li>element 3</li>
     </ol>
+    <ol>
+        <li>element 1</li>
+        <li>element 2</li>
+        <li>element 3</li>
+    </ol>
     <input type="checkbox" id="Real madrid" name="Real madrid"> <-tanlang
     <input type="radio" id="Barselona name="Barselona"> <-Tanlang
 </body> 
